--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "chance": "^1.1.11",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.5"
